--- a/src/main/resources/static/include/student/Extracurricular.html
+++ b/src/main/resources/static/include/student/Extracurricular.html
@@ -9,6 +9,9 @@
     <script src="../../layui/layui.js"></script>
     <script src="../../JS/bootstrap/bootstrap.min.js"></script>
     <script type="text/javascript">
+        $(document).ready(function () {
+            $("#username").text(sessionStorage.getItem("name"));
+        });
         function getRoles() {
             $.ajax({
                 type:"post",
@@ -53,7 +56,7 @@
     <div style="height: 100%;width: 100%;">
         <div style="height: 70%;width: 100%;">
             <h2 style="color: #0066FF;float: left">XCK程序栈</h2>
-            <p style="color: #080808;float: right"> <a href="#" onclick="logout()" style="color: #080808">退出</a></p>
+            <p style="color: #080808;float: right">欢迎您：<span id="username"></span>同学  | <a href="#" onclick="logout()" style="color: #080808">退出</a></p>
         </div>
         <div style="height: 30%;width: 100%;">
             <ul class="nav navbar-nav">
@@ -148,8 +151,8 @@
                             data:{course_codes:course_codes},
                             success:function (data) {
                                 if (data.code == 233){
-                                    location.reload();
                                     layer.msg(data.message);
+                                    location.reload();
                                 }
                             }
                         });
