--- a/src/main/resources/static/include/student/test.html
+++ b/src/main/resources/static/include/student/test.html
@@ -14,6 +14,9 @@
         }
     </style>
     <script type="text/javascript">
+        $(document).ready(function () {
+            $("#username").text(sessionStorage.getItem("name"));
+        });
         function getRoles() {
             $.ajax({
                 type:"post",
@@ -52,7 +55,7 @@
     <div style="height: 100%;width: 100%;">
         <div style="height: 70%;width: 100%;">
             <h2 style="color: #0066FF;float: left">XCK程序栈</h2>
-            <p style="color: #080808;float: right"> <a href="#" onclick="logout()" style="color: #080808">退出</a></p>
+            <p style="color: #080808;float: right">欢迎您：<span id="username"></span>同学  | <a href="#" onclick="logout()" style="color: #080808">退出</a></p>
         </div>
         <div style="height: 30%;width: 100%;">
             <ul class="nav navbar-nav">
