--- a/src/main/resources/static/include/teacher/modify_score.html
+++ b/src/main/resources/static/include/teacher/modify_score.html
@@ -15,6 +15,9 @@
         }
     </style>
     <script type="text/javascript">
+        $(document).ready(function () {
+            $("#username").text(sessionStorage.getItem("name"));
+        });
         function logout() {
             $.ajax({
                 type: "post",
@@ -37,7 +40,7 @@
     <div style="height: 100%;width: 100%;">
         <div style="height: 70%;width: 100%;">
             <h2 style="color: #0066FF;float: left">XCK程序栈</h2>
-            <p style="color: #080808;float: right"><a href="#" onclick="logout()" style="color: #080808">退出</a></p>
+            <p style="color: #080808;float: right">欢迎您：<span id="username"></span>老师  | <a href="#" onclick="logout()" style="color: #080808">退出</a></p>
         </div>
         <div style="height: 30%;width: 100%;">
             <ul class="nav navbar-nav">
