--- a/src/main/resources/static/include/teacher/release_score.html
+++ b/src/main/resources/static/include/teacher/release_score.html
@@ -63,6 +63,7 @@
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">信息维护<span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="info.html" id="sel">个人信息</a></li>
+                        <li><a href="Change_Pass.html">修改密码</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
