以redis做为缓存

--- a/src/main/resources/static/include/student/Change_Pass.html
+++ b/src/main/resources/static/include/student/Change_Pass.html
@@ -19,6 +19,7 @@
                             type: "post",
                             url: "/up_pass",
                             data: {
+                                "id":sessionStorage.getItem("id"),
                                 "password":password,
                                 "new_pass":new_pass
                             },
