--- a/src/main/resources/static/include/student/info.html
+++ b/src/main/resources/static/include/student/info.html
@@ -103,9 +103,10 @@
             elem: '#demo'
             , height: 420
             , even: true
-            , url: '/sel_info' //数据接口
-            /*, page: true //开启分页*/
-            , limit: 10
+            , url: '/sel_info'/*?id='+sessionStorage.getItem("id")*/ //数据接口
+            ,where: {
+                id:sessionStorage.getItem("id")
+            }
             ,id:'tests'
             , cols: [[ //表头{type:'checkbox'}
                 {field: 'id', title: '账号', width: 120, sort: true}
