--- a/src/main/resources/static/include/teacher/info.html
+++ b/src/main/resources/static/include/teacher/info.html
@@ -90,6 +90,9 @@
             , height: 420
             , even: true
             , url: '/sel_info' //数据接口
+            ,where: {
+                id:sessionStorage.getItem("id")
+            }
             , page: true //开启分页
             , limit: 10
             ,id:'tests'
