--- a/src/main/resources/static/include/student/test.html
+++ b/src/main/resources/static/include/student/test.html
@@ -21,6 +21,9 @@
             $.ajax({
                 type:"post",
                 url:"/getRoles",
+                headers: {
+                    AccessToken:sessionStorage.getItem("token")
+                },
                 contentType: 'application/json;charset=utf-8',
                 success:function (data) {
                     if (data.code > 200){
@@ -104,8 +107,8 @@
             , height: 420
             , even: true
             , url: '/sel_test' //数据接口
-            ,where: {
-                id:sessionStorage.getItem("id")
+            ,headers: {
+                AccessToken:sessionStorage.getItem("token")
             }
             , page: true //开启分页
             , limit: 10
