--- a/src/main/resources/static/include/student/score1.html
+++ b/src/main/resources/static/include/student/score1.html
@@ -16,6 +16,9 @@
             $.ajax({
                 type:"post",
                 url:"/getRoles",
+                headers: {
+                    AccessToken:sessionStorage.getItem("token")
+                },
                 contentType: 'application/json;charset=utf-8',
                 success:function (data) {
                     if (data.code > 200){
