--- a/src/main/resources/static/include/teacher/release_score.html
+++ b/src/main/resources/static/include/teacher/release_score.html
@@ -22,6 +22,9 @@
             $.ajax({
                 type:"post",
                 url:"/getRoles",
+                headers: {
+                    AccessToken:sessionStorage.getItem("token")
+                },
                 contentType: 'application/json;charset=utf-8',
                 success:function (data) {
                     if (data.code > 200){
@@ -96,8 +99,8 @@
             , height: 400
             , even: true
             , url: '/getStu_Score' //数据接口
-            ,where: {
-                id:sessionStorage.getItem("id")
+            ,headers: {
+                AccessToken:sessionStorage.getItem("token")
             }
             , page: true //开启分页
             , limit: 10
