--- a/src/main/resources/static/include/student/Info_FeedBack.html
+++ b/src/main/resources/static/include/student/Info_FeedBack.html
@@ -7,7 +7,7 @@
 <body>
 <h4>权限控制测试成功</h4><br><br>
 <P>信息反馈页面</P><br><br>
-<p>MQ学的不到家，所以暂时不写这个功能，哈哈哈哈</p>
+<p>学的不到家，所以暂时不写这个功能，哈哈哈哈</p>
 
 </body>
 </html>
